<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Nombre -->
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_destino"/>

        <!-- País -->
        <Spinner
            android:id="@+id/spPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Precio -->
        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_precio"
            android:inputType="numberDecimal"/>

        <!-- Descripción -->
        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descripcion"
            android:inputType="textMultiLine"
            android:minLines="3"/>

        <!-- Botón para elegir imagen -->
        <Button
            android:id="@+id/btnSeleccionarImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_seleccionar_imagen"/>

        <!-- Botón para guardar -->
        <Button
            android:id="@+id/btnGuardarDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar_destino"/>
    </LinearLayout>
</ScrollView>
