<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="24dp">

    <!--campo donde se guardara el correo-->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/white"
        android:textColor="@color/textobotones"
        android:hintTextColor="@color/textobotones"/>

    <!--campo donde se guardara la contraseña-->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:backgroundTint="@color/textobotones"
        android:textColor="@color/textobotones"
        android:hintTextColor="@color/textobotones"/>

    <!--boton para iniciar sesion-->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:backgroundTint="@color/botones"
        android:textColor="@color/textobotones"/>

    <!--boton para registrarse-->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:backgroundTint="@color/botones"
        android:textColor="@color/textobotones"/>

</LinearLayout>